# coepi-backend-rust

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml  README.md
server/src/: error.rs  main.rs  shard.rs  storage.rs  timestamp.rs
server/src/error/: context.rs
simulator/: Cargo.toml
simulator/src/: main.rs  user.rs
src/: endpoints.rs
