[package]
name = "contact_client"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3.1"
libc = "0.2.68"
rand_chacha = "0.2.2"
rand = "0.7.3"

[lib]
crate-type = ["cdylib", "staticlib"]
