[package]
name = "cen_server"
version = "0.1.0"
authors = ["Jane Lusby <jlusby42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
eyre = "0.3.5"
bytes = "0.5.4"
cen = { git = "https://github.com/Co-Epi/CEN.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
