[package]
name = "tcn_server"
version = "0.1.0"
authors = ["Jane Lusby <jlusby42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
eyre = "0.3.7"
bytes = "0.5.4"
tcn = "0.4.1"
rand = "0.7.3"
once_cell = "1.3.1"
futures = "0.3.4"
tracing = "0.1"
tracing-error = "0.1.2"
tracing-subscriber = { features = ["registry", "fmt"], version = "0.2" }
indenter = "0.1.3"
color-backtrace = "0.3.0"
tracing-futures = "0.2.3"
structopt = "0.3.12"
