[package]
name = "simulator"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3.1"
tcn = "0.4.1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "full"] }
tracing = "0.1"
tracing-error = "0.1.2"
tracing-subscriber = { features = ["registry", "fmt"], version = "0.2" }
indenter = "0.1.3"
color-backtrace = "0.3.0"
tracing-futures = "0.2.3"
structopt = "0.3.12"
futures = "0.3"
rand = "0.7"
eyre = "0.3.7"
reqwest = "0.10"


